# Tracely

./: .dockerignore  .env.example  .gitignore  DEMO.md  DEPLOY.md  Dockerfile.backend  Makefile  OVERVIEW.md  README.md  TRACELY_REVIEW.md  auto-agent-detail.yml  auto-langchain-detail.yml  docker-compose.yml  pyproject.toml  snap-auto-openai-expanded.yml
.github/: dependabot.yml
.playwright-mcp/: page-2026-06-06T00-30-56-172Z.yml  page-2026-06-07T03-36-49-458Z.yml  page-2026-06-07T03-39-58-763Z.yml  page-2026-06-07T03-40-42-438Z.yml  page-2026-06-07T03-41-01-665Z.yml  page-2026-06-07T03-41-42-603Z.yml  page-2026-06-07T03-43-43-073Z.yml  page-2026-06-07T03-46-47-988Z.yml  page-2026-06-07T03-48-49-615Z.yml  page-2026-06-07T03-49-48-072Z.yml  page-2026-06-07T03-51-14-694Z.yml  page-2026-06-07T03-53-18-379Z.yml  page-2026-06-07T03-55-30-460Z.yml  page-2026-06-07T03-56-03-920Z.yml  page-2026-06-07T03-56-56-825Z.yml  page-2026-06-07T03-57-32-694Z.yml  page-2026-06-07T04-01-30-296Z.yml  page-2026-06-07T04-02-25-823Z.yml  page-2026-06-07T04-05-29-380Z.yml  (+39 more)
backend/: README.md  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_init_registry.py  0002_regression.py  0003_gate.py  0004_clusters.py  0005_failure_intel.py  0006_gate_metrics.py  0007_evaluators.py  0008_auth.py  0009_meta_analysis.py  0010_rolling_summary.py  0011_conversation_agents.py  0012_advisory_evaluator_flag.py  0013_score_annotations.py  0014_monitors.py
backend/tests/: conftest.py  test_auth_classify.py  test_auth_clerk.py  test_auth_endpoints.py  test_auth_principal.py  test_calibration.py  test_conversation_agents.py  test_eval_cost.py  test_eval_debounce.py  test_eval_targeting.py  test_evaluation_run_stream.py  test_evaluators_api.py  test_fi_clusters.py  test_gate_eval.py  test_health.py  test_llm_judge_levels.py  test_meta_analysis.py  test_monitor_conditions.py  test_notifications_dispatch.py  test_otel_mapping.py  test_output_schema.py  test_prod_guards.py  test_regression_promote.py  test_rolling_summary.py  test_template_resolver.py  test_textfmt.py  test_verdict_policy.py
backend/tracely/: __init__.py  celery_app.py  ch_migrate.py  clickhouse.py  cluster.py  config.py  db.py  eval_runner.py  evaluators.py  events.py  fi.py  gate.py  log_config.py  models.py  registry.py  regression.py  schemas.py  seed.py  tasks.py  textfmt.py  trajectory.py
backend/tracely/api/: advisory.py  auth.py  main.py
backend/tracely/api/dto/: __init__.py  auth.py  common.py  traces.py
backend/tracely/api/routers/: analytics.py  auth.py  calibration.py  cases.py  clusters.py  evaluations.py  evaluators.py  gate.py  health.py  meta_analysis.py  monitors.py  otlp.py  reads.py  search.py  sessions.py  traces.py
backend/tracely/auth/: __init__.py  classify.py  clerk.py  invitations.py  passwords.py  principal.py  provisioning.py  queries.py  tokens.py
backend/tracely/ch_migrations/: 0001_events.up.sql  0002_scores.up.sql
backend/tracely/domain/: trajectory.py
backend/tracely/domain/analysis/: __init__.py  statistics.py
backend/tracely/domain/evaluation/: __init__.py  calibration.py  evaluator_suggestion.py  generation.py  output_schema.py  results.py  rolling_summary.py  targeting.py  template_resolver.py  text.py  verdict.py
backend/tracely/domain/evaluation/evaluators/: __init__.py  base.py  catalog.py  llm_judge.py  structural.py
backend/tracely/domain/failure/: __init__.py  clustering.py  histogram.py  signature.py  text.py
backend/tracely/domain/gate/: __init__.py  warnings.py
backend/tracely/domain/monitoring/: __init__.py  conditions.py
backend/tracely/domain/regression/: __init__.py  contract.py  fixtures.py
backend/tracely/domain/traces/: __init__.py  metadata.py  spans.py
backend/tracely/infrastructure/: mailer.py
backend/tracely/infrastructure/blob/: s3.py
backend/tracely/infrastructure/clickhouse/: async_reader.py  client.py  events_schema.py  migrations.py  score_writer.py  trace_reader.py
backend/tracely/infrastructure/clickhouse/ddl/: 0001_events.up.sql  0002_scores.up.sql  0003_events_ttl.up.sql  0004_scores_ttl.up.sql
backend/tracely/infrastructure/db/: __init__.py  base.py  engine.py  models.py  repositories.py  session.py
backend/tracely/infrastructure/llm/: analysis_agents.py  embeddings.py  judge.py  meta_analysis_agent.py  provider.py  rolling_summary_agent.py
backend/tracely/infrastructure/notifications/: __init__.py  dispatch.py  slack.py  webhook.py
backend/tracely/infrastructure/queue/: celery_app.py  eval_debounce.py
backend/tracely/infrastructure/registry/: agents.py
backend/tracely/ingestion/: __init__.py  process_batch.py
backend/tracely/otel/: __init__.py  attributes.py  convention.py  io_field.py  mapping.py  messages.py  parser.py  span_mapper.py  tool_enrichment.py  types.py  usage.py
backend/tracely/services/: conversation_agents_service.py  evaluation_service.py  failure_intel_service.py  gate_service.py  ingestion_service.py  meta_analysis_service.py  monitoring_service.py  regression_service.py  rolling_summary_service.py  seeding_service.py  structural_clustering_service.py
backend/tracely/workers/: tasks.py
sdk/: README.md  example.py  pyproject.toml
sdk/examples/: README.md  _fake_db.py  auto_agent.py  auto_anthropic.py  auto_bedrock.py  auto_claude_agent.py  auto_crewai.py  auto_gemini.py  auto_google_adk.py  auto_langchain.py  auto_langgraph.py  auto_litellm.py  auto_llama_index.py  auto_mistral.py  auto_openai.py  auto_openai_agents.py  auto_openrouter.py  dropin_anthropic.py  dropin_openai.py  manual_spans.py  seed_conversations.py  seed_handler.py  seed_multicall.py  seed_multiturn.py  seed_regression.py  weather_agent.py  weather_agent_cli.py
sdk/tests/: test_auto_tracing.py  test_redaction.py  test_replay_autoinstrument.py  test_replay_bridge.py  test_replay_real_providers.py
sdk/tracely_sdk/: __init__.py  _wrap.py  anthropic.py  cli.py  google.py  mistral.py  openai.py  openrouter.py  xai.py
workers/: README.md  pyproject.toml
workers/tracely_workers/: worker.py
(+208 files in other folders)
