# uv workspace root (not itself a package).
[project]
name = "tracely-monorepo"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
package = false

[dependency-groups]
dev = [
  "pytest>=9.1.1",
  "pytest-asyncio>=0.23",
  "ruff>=0.15.19",
  "tracely-sdk[all]",
  "python-dotenv>=1.0",   # sdk/examples/* load .env so provider keys work without a manual export
  "aiosqlite>=0.20",      # hermetic async DB for the auth test suite (no Postgres required)
  "httpx>=0.27",          # ASGITransport test client for FastAPI auth endpoints
]

[tool.uv.workspace]
members = ["backend", "workers", "sdk"]

[tool.uv.sources]
tracely-backend = { workspace = true }
tracely-sdk = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
