[project]
name = "tracely-backend"
version = "0.1.0"
description = "Tracely backend: FastAPI API + shared domain (ingestion, ClickHouse, registry, OTLP mapping, Celery tasks)."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sqlalchemy>=2.0.30",
  "greenlet>=3.0",
  "asyncpg>=0.29",
  "psycopg[binary]>=3.2",
  "alembic>=1.13",
  "clickhouse-connect>=0.7.16",
  "aiohttp>=3.9",
  "boto3>=1.34",
  "opentelemetry-proto>=1.25",
  "celery[redis]>=5.4",
  "structlog>=24.1",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tracely"]
