[project]
name = "tracely-sdk"
version = "0.1.0"
description = "Tracely Python SDK: instrument agents and export traces to Tracely over OTLP."
requires-python = ">=3.10"
dependencies = [
  "opentelemetry-sdk>=1.25",
  "opentelemetry-exporter-otlp-proto-http>=1.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tracely_sdk"]
