[project]
name = "tracely-workers"
version = "0.1.0"
description = "Tracely Celery worker runtime (runs the tasks defined in the backend package)."
requires-python = ">=3.12"
dependencies = ["tracely-backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tracely_workers"]
